# dans-util

./: .clang-tidy  .dans_dev  CMakeLists.txt  README.md  crun.sh  cwatcher.sh  run.sh  watcher.sh
app/: main.c  main.cpp
include/dans/: chrono.hpp  dev.hpp  env.hpp  fmt.hpp  lit.hpp  math.hpp  overload.hpp  random.hpp  stats.hpp  str.hpp  util.hpp  views.hpp
src/: binary_io.c  binary_io.h  chrono.cpp  dev.cpp  env.cpp  fmt.cpp  random.cpp  str.cpp  util.cpp
